// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots drawer controlled 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "color": "white",
        "fontSize": 24,
        "padding": 48,
      }
    }
  >
    <div>
      <button
        data-css-gukh6t=""
        disabled={false}
        onClick={[Function]}
        style={Object {}}
      >
        <span
          data-css-15b13by=""
        >
          Toggle drawer
        </span>
      </button>
      <div
        className="css-index--drawerroot-iqj7ys"
      >
        <div
          className="css-index--drawerbase-1g5sei2"
          onClick={[Function]}
        >
          <div
            className="css-index--drawerpanelcontent-1suarfy"
          >
            <div>
              Drawer Base Here
            </div>
          </div>
          <div
            className="css-index--togglebuttoncontainer-1ai77lf"
          >
            <button
              aria-label="Collapse"
              className="css-index--togglebutton-fe7rcw"
              onClick={[Function]}
            >
              <div
                className="css-index--rotatable-1n7fyx2"
              >
                <div
                  className="css-index--iconcontainer-1o7wiin"
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                    />
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
        <div
          className="css-index--drawerpanel-ja520o"
        >
          <div
            className="css-collapsible--container-fn9lpf"
          >
            Drawer Content Here
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots drawer default 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "color": "white",
        "fontSize": 24,
        "padding": 48,
      }
    }
  >
    <div
      className="css-index--drawerroot-iqj7ys"
    >
      <div
        className="css-index--drawerbase-1eeyo50"
        onClick={[Function]}
      >
        <div
          className="css-index--drawerpanelcontent-1suarfy"
        >
          <div>
            Drawer Base Here
          </div>
        </div>
        <div
          className="css-index--togglebuttoncontainer-1ai77lf"
        >
          <button
            aria-label="Expand"
            className="css-index--togglebutton-fe7rcw"
            onClick={[Function]}
          >
            <div
              className="css-index--rotatable-1564716"
            >
              <div
                className="css-index--iconcontainer-1o7wiin"
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        className="css-index--drawerpanel-1f648v3"
      >
        <div
          className="css-collapsible--container-fn9lpf"
        >
          Drawer Content Here
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots drawer row component with actions 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "color": "white",
        "fontSize": 24,
        "padding": 48,
      }
    }
  >
    <div
      className="css-index--drawerroot-iqj7ys"
    >
      <div
        className="css-index--drawerbase-1eeyo50"
        onClick={[Function]}
      >
        <div
          className="css-index--drawerpanelcontent-1suarfy"
        >
          <div
            className="css-index--row-1i6pawm"
          >
            <div
              className="css-index--overlays-s3vwp9"
            >
              <span
                className="css-index--imagelink-fw1euf"
              >
                <a
                  href="https://duckduckgo.com?q=image"
                >
                  <img
                    src="https://cataas.com/cat"
                  />
                </a>
              </span>
              <div
                className="css-index--fulloverlay-1grv38i"
              >
                <span
                  className="css-index--fulloverlaylinkspan-169kk5"
                  onBlur={[Function]}
                  onFocus={[Function]}
                >
                  <a
                    href="https://duckduckgo.com?q=overlay"
                  >
                    Overlay
                  </a>
                </span>
              </div>
            </div>
            <div
              className="css-index--words-1o82hkz"
            >
              <div
                className="css-index--title-oqyh1m"
              >
                <span
                  className="css-index--textlink-s873co"
                >
                  <a
                    href="https://duckduckgo.com?q=title"
                  >
                    I'm a Row with Actions
                  </a>
                </span>
              </div>
              <div
                className="css-index--metadata-t5ipjx"
              >
                <span
                  className="css-index--metadatadatum-1fj7jah"
                >
                  <span
                    className="css-index--textlink-s873co"
                  >
                    <a
                      href="https://duckduckgo.com?q=cats"
                    >
                      Kitten McCatbuns
                    </a>
                  </span>
                </span>
                <span
                  aria-hidden={true}
                  className="css-index--metadatadot-jgxppi"
                >
                  ·
                </span>
                <span
                  className="css-index--metadatadatum-1fj7jah"
                >
                  23 hours of cuteness
                </span>
              </div>
            </div>
            <div
              className="css-index--actionbar-yo5e5p"
            >
              <button
                className="css-index--actionbutton-6ov4bp"
                onClick={[Function]}
              >
                <div
                  className="css-index--iconcontainer-1o7wiin"
                >
                  <svg
                    aria-label="more icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M6 14.5c-1.1046 0-2-.8954-2-2s.8954-2 2-2 2 .8954 2 2-.8954 2-2 2zm12 0c-1.1046 0-2-.8954-2-2s.8954-2 2-2 2 .8954 2 2-.8954 2-2 2zm-6 0c-1.1046 0-2-.8954-2-2s.8954-2 2-2 2 .8954 2 2-.8954 2-2 2z"
                    />
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
        <div
          className="css-index--togglebuttoncontainer-1ai77lf"
        >
          <button
            aria-label="Expand"
            className="css-index--togglebutton-fe7rcw"
            onClick={[Function]}
          >
            <div
              className="css-index--rotatable-1564716"
            >
              <div
                className="css-index--iconcontainer-1o7wiin"
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        className="css-index--drawerpanel-1f648v3"
      >
        <div
          className="css-collapsible--container-fn9lpf"
        >
          Drawer Content Here
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots drawer stack of drawers 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "color": "white",
        "fontSize": 24,
        "padding": 48,
      }
    }
  >
    <div>
      <div
        className="css-index--drawerroot-iqj7ys"
      >
        <div
          className="css-index--drawerbase-1eeyo50"
          onClick={[Function]}
        >
          <div
            className="css-index--drawerpanelcontent-1suarfy"
          >
            <div>
              The Drawer #1
            </div>
          </div>
          <div
            className="css-index--togglebuttoncontainer-1ai77lf"
          >
            <button
              aria-label="Expand"
              className="css-index--togglebutton-fe7rcw"
              onClick={[Function]}
            >
              <div
                className="css-index--rotatable-1564716"
              >
                <div
                  className="css-index--iconcontainer-1o7wiin"
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                    />
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
        <div
          className="css-index--drawerpanel-1f648v3"
        >
          <div
            className="css-collapsible--container-fn9lpf"
          />
        </div>
      </div>
      <div
        className="css-index--drawerroot-iqj7ys"
      >
        <div
          className="css-index--drawerbase-1eeyo50"
          onClick={[Function]}
        >
          <div
            className="css-index--drawerpanelcontent-1suarfy"
          >
            <div>
              The Drawer #2
            </div>
          </div>
          <div
            className="css-index--togglebuttoncontainer-1ai77lf"
          >
            <button
              aria-label="Expand"
              className="css-index--togglebutton-fe7rcw"
              onClick={[Function]}
            >
              <div
                className="css-index--rotatable-1564716"
              >
                <div
                  className="css-index--iconcontainer-1o7wiin"
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                    />
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
        <div
          className="css-index--drawerpanel-1f648v3"
        >
          <div
            className="css-collapsible--container-fn9lpf"
          />
        </div>
      </div>
      <div
        className="css-index--drawerroot-iqj7ys"
      >
        <div
          className="css-index--drawerbase-1eeyo50"
          onClick={[Function]}
        >
          <div
            className="css-index--drawerpanelcontent-1suarfy"
          >
            <div>
              The Drawer #2
            </div>
          </div>
          <div
            className="css-index--togglebuttoncontainer-1ai77lf"
          >
            <button
              aria-label="Expand"
              className="css-index--togglebutton-fe7rcw"
              onClick={[Function]}
            >
              <div
                className="css-index--rotatable-1564716"
              >
                <div
                  className="css-index--iconcontainer-1o7wiin"
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                    />
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
        <div
          className="css-index--drawerpanel-1f648v3"
        >
          <div
            className="css-collapsible--container-fn9lpf"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots drawer stack of non-sibling drawers 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "color": "white",
        "fontSize": 24,
        "padding": 48,
      }
    }
  >
    <div>
      <div>
        <div
          className="css-index--drawerroot-iqj7ys"
        >
          <div
            className="css-index--drawerbase-1eeyo50"
            onClick={[Function]}
          >
            <div
              className="css-index--drawerpanelcontent-1suarfy"
            >
              <div>
                The Drawer #1
              </div>
            </div>
            <div
              className="css-index--togglebuttoncontainer-1ai77lf"
            >
              <button
                aria-label="Expand"
                className="css-index--togglebutton-fe7rcw"
                onClick={[Function]}
              >
                <div
                  className="css-index--rotatable-1564716"
                >
                  <div
                    className="css-index--iconcontainer-1o7wiin"
                  >
                    <svg
                      aria-label="caret down icon"
                      role="img"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            className="css-index--drawerpanel-1f648v3"
          >
            <div
              className="css-collapsible--container-fn9lpf"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          className="css-index--drawerroot-iqj7ys"
        >
          <div
            className="css-index--drawerbase-1eeyo50"
            onClick={[Function]}
          >
            <div
              className="css-index--drawerpanelcontent-1suarfy"
            >
              <div>
                The Drawer #2
              </div>
            </div>
            <div
              className="css-index--togglebuttoncontainer-1ai77lf"
            >
              <button
                aria-label="Expand"
                className="css-index--togglebutton-fe7rcw"
                onClick={[Function]}
              >
                <div
                  className="css-index--rotatable-1564716"
                >
                  <div
                    className="css-index--iconcontainer-1o7wiin"
                  >
                    <svg
                      aria-label="caret down icon"
                      role="img"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            className="css-index--drawerpanel-1f648v3"
          >
            <div
              className="css-collapsible--container-fn9lpf"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          className="css-index--drawerroot-iqj7ys"
        >
          <div
            className="css-index--drawerbase-1eeyo50"
            onClick={[Function]}
          >
            <div
              className="css-index--drawerpanelcontent-1suarfy"
            >
              <div>
                The Drawer #2
              </div>
            </div>
            <div
              className="css-index--togglebuttoncontainer-1ai77lf"
            >
              <button
                aria-label="Expand"
                className="css-index--togglebutton-fe7rcw"
                onClick={[Function]}
              >
                <div
                  className="css-index--rotatable-1564716"
                >
                  <div
                    className="css-index--iconcontainer-1o7wiin"
                  >
                    <svg
                      aria-label="caret down icon"
                      role="img"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            className="css-index--drawerpanel-1f648v3"
          >
            <div
              className="css-collapsible--container-fn9lpf"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots drawer using custom aria label 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "color": "white",
        "fontSize": 24,
        "padding": 48,
      }
    }
  >
    <div
      className="css-index--drawerroot-iqj7ys"
    >
      <div
        className="css-index--drawerbase-1eeyo50"
        onClick={[Function]}
      >
        <div
          className="css-index--drawerpanelcontent-1suarfy"
        >
          <div>
            Drawer Base Here
          </div>
        </div>
        <div
          className="css-index--togglebuttoncontainer-1ai77lf"
        >
          <button
            aria-label="Expand custom drawer"
            className="css-index--togglebutton-fe7rcw"
            onClick={[Function]}
          >
            <div
              className="css-index--rotatable-1564716"
            >
              <div
                className="css-index--iconcontainer-1o7wiin"
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        className="css-index--drawerpanel-1f648v3"
      >
        <div
          className="css-collapsible--container-fn9lpf"
        >
          Drawer Content Here
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots drawer using onToggle prop 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "color": "white",
        "fontSize": 24,
        "padding": 48,
      }
    }
  >
    <div>
      <div
        className="css-index--drawerroot-iqj7ys"
      >
        <div
          className="css-index--drawerbase-1eeyo50"
          onClick={[Function]}
        >
          <div
            className="css-index--drawerpanelcontent-1suarfy"
          >
            <div>
              Drawer is 
              closed
            </div>
          </div>
          <div
            className="css-index--togglebuttoncontainer-1ai77lf"
          >
            <button
              aria-label="Expand"
              className="css-index--togglebutton-fe7rcw"
              onClick={[Function]}
            >
              <div
                className="css-index--rotatable-1564716"
              >
                <div
                  className="css-index--iconcontainer-1o7wiin"
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                    />
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
        <div
          className="css-index--drawerpanel-1f648v3"
        >
          <div
            className="css-collapsible--container-fn9lpf"
          >
            Drawer Content Here
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots drawer using startOpen prop 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "color": "white",
        "fontSize": 24,
        "padding": 48,
      }
    }
  >
    <div
      className="css-index--drawerroot-iqj7ys"
    >
      <div
        className="css-index--drawerbase-1g5sei2"
        onClick={[Function]}
      >
        <div
          className="css-index--drawerpanelcontent-1suarfy"
        >
          <div>
            Base here
          </div>
        </div>
        <div
          className="css-index--togglebuttoncontainer-1ai77lf"
        >
          <button
            aria-label="Collapse"
            className="css-index--togglebutton-fe7rcw"
            onClick={[Function]}
          >
            <div
              className="css-index--rotatable-1n7fyx2"
            >
              <div
                className="css-index--iconcontainer-1o7wiin"
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        className="css-index--drawerpanel-ja520o"
      >
        <div
          className="css-collapsible--container-fn9lpf"
        >
          <div>
            Panel here
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots drawer with row component 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "color": "white",
        "fontSize": 24,
        "padding": 48,
      }
    }
  >
    <div
      className="css-index--drawerroot-iqj7ys"
    >
      <div
        className="css-index--drawerbase-1eeyo50"
        onClick={[Function]}
      >
        <div
          className="css-index--drawerpanelcontent-1suarfy"
        >
          <div
            className="css-index--row-1i6pawm"
          >
            <div
              className="css-index--overlays-s3vwp9"
            >
              <div
                className="css-index--imagediv-1f7mipn"
              />
            </div>
            <div
              className="css-index--words-1o82hkz"
            >
              <div
                className="css-index--title-oqyh1m"
              >
                Look at me! I'm a &lt;Row /&gt;!
              </div>
              <div
                className="css-index--metadata-t5ipjx"
              >
                <span
                  className="css-index--metadatadatum-1fj7jah"
                >
                  Kitten McCatbuns
                </span>
                <span
                  aria-hidden={true}
                  className="css-index--metadatadot-jgxppi"
                >
                  ·
                </span>
                <span
                  className="css-index--metadatadatum-1fj7jah"
                >
                  23 hours of cuteness
                </span>
              </div>
            </div>
            <div
              className="css-index--actionbar-1lxbv5h"
            >
              <button
                className="css-index--actionbutton-6ov4bp"
              >
                <div
                  className="css-index--iconcontainer-1o7wiin"
                >
                  <svg
                    aria-label="more icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M6 14.5c-1.1046 0-2-.8954-2-2s.8954-2 2-2 2 .8954 2 2-.8954 2-2 2zm12 0c-1.1046 0-2-.8954-2-2s.8954-2 2-2 2 .8954 2 2-.8954 2-2 2zm-6 0c-1.1046 0-2-.8954-2-2s.8954-2 2-2 2 .8954 2 2-.8954 2-2 2z"
                    />
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
        <div
          className="css-index--togglebuttoncontainer-1ai77lf"
        >
          <button
            aria-label="Expand"
            className="css-index--togglebutton-fe7rcw"
            onClick={[Function]}
          >
            <div
              className="css-index--rotatable-1564716"
            >
              <div
                className="css-index--iconcontainer-1o7wiin"
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        className="css-index--drawerpanel-1f648v3"
      >
        <div
          className="css-collapsible--container-fn9lpf"
        >
          Drawer Content Here
        </div>
      </div>
    </div>
  </div>
</div>
`;
